Update and remove l-wikibase
The original code can not be tested as there were issues with Jackson
version. There were breaking changes in API and OSGI dependencies
grown significantly. For those reasons this plugin is removed from standard
deployment.